--- a/apps/website/src/components/index.css
+++ b/apps/website/src/components/index.css
@@ -1,34 +1,38 @@
 @font-face {
-  font-family: 'Gordita';
-  src: url('./fonts/Gordita/Gordita-Regular.eot?#iefix') format('embedded-opentype'),
-    url('./fonts/Gordita/Gordita-Regular.woff') format('woff'),
-    url('./fonts/Gordita/Gordita-Regular.ttf') format('truetype');
+  font-family: "Gordita";
+  src: url("./fonts/Gordita/Gordita-Regular.eot?#iefix")
+      format("embedded-opentype"),
+    url("./fonts/Gordita/Gordita-Regular.woff") format("woff"),
+    url("./fonts/Gordita/Gordita-Regular.ttf") format("truetype");
   font-style: normal;
   font-display: fallback;
 }
 @font-face {
-  font-family: 'Gordita';
-  src: url('./fonts/Gordita/Gordita-Thin.eot?#iefix') format('embedded-opentype'),
-    url('./fonts/Gordita/Gordita-Thin.woff') format('woff'),
-    url('./fonts/Gordita/Gordita-Thin.ttf') format('truetype');
+  font-family: "Gordita";
+  src: url("./fonts/Gordita/Gordita-Thin.eot?#iefix")
+      format("embedded-opentype"),
+    url("./fonts/Gordita/Gordita-Thin.woff") format("woff"),
+    url("./fonts/Gordita/Gordita-Thin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
   font-display: fallback;
 }
 @font-face {
-  font-family: 'Gordita';
-  src: url('./fonts/Gordita/Gordita-Medium.eot?#iefix') format('embedded-opentype'),
-    url('./fonts/Gordita/Gordita-Medium.woff') format('woff'),
-    url('./fonts/Gordita/Gordita-Medium.ttf') format('truetype');
+  font-family: "Gordita";
+  src: url("./fonts/Gordita/Gordita-Medium.eot?#iefix")
+      format("embedded-opentype"),
+    url("./fonts/Gordita/Gordita-Medium.woff") format("woff"),
+    url("./fonts/Gordita/Gordita-Medium.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
   font-display: fallback;
 }
 @font-face {
-  font-family: 'Gordita';
-  src: url('./fonts/Gordita/Gordita-Bold.eot?#iefix') format('embedded-opentype'),
-    url('./fonts/Gordita/Gordita-Bold.woff') format('woff'),
-    url('./fonts/Gordita/Gordita-Bold.ttf') format('truetype');
+  font-family: "Gordita";
+  src: url("./fonts/Gordita/Gordita-Bold.eot?#iefix")
+      format("embedded-opentype"),
+    url("./fonts/Gordita/Gordita-Bold.woff") format("woff"),
+    url("./fonts/Gordita/Gordita-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: fallback;
@@ -37,8 +41,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
 
 html {
   @apply font-display;
@@ -118,7 +120,11 @@ pre {
 }
 .dark .feature-block {
   box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.35);
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.01) 0%, rgba(0, 0, 0, 0) 20%);
+  background-image: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.01) 0%,
+    rgba(0, 0, 0, 0) 20%
+  );
   background-color: rgb(54, 55, 56);
   border-radius: 3px;
 }
@@ -127,7 +133,7 @@ pre {
   border-style: solid;
   transition: all 250ms;
   border-width: 0.15em 0.15em 0 0;
-  content: '';
+  content: "";
   display: inline-block;
   height: 0.5em;
   width: 0.5em;
@@ -199,7 +205,7 @@ pre {
     opacity: 0;
   }
   [data-tooltip]::before {
-    content: '';
+    content: "";
     border: 5px solid transparent;
     z-index: 10;
   }
@@ -229,23 +235,23 @@ pre {
   }
 
   [data-tooltip]:not([flow])::before,
-  [data-tooltip][flow^='up']::before {
+  [data-tooltip][flow^="up"]::before {
     bottom: calc(100% + 5px);
     border-bottom-width: 0;
     border-top-color: #333;
   }
   .dark [data-tooltip]:not([flow])::before,
-  .dark [data-tooltip][flow^='up']::before {
+  .dark [data-tooltip][flow^="up"]::before {
     border-top-color: #dcdcdc;
   }
   [data-tooltip]:not([flow])::after,
-  [data-tooltip][flow^='up']::after {
+  [data-tooltip][flow^="up"]::after {
     bottom: calc(100% + 10px);
   }
   [data-tooltip]:not([flow])::before,
   [data-tooltip]:not([flow])::after,
-  [data-tooltip][flow^='up']::before,
-  [data-tooltip][flow^='up']::after {
+  [data-tooltip][flow^="up"]::before,
+  [data-tooltip][flow^="up"]::after {
     left: 50%;
     transform: translate(-50%, -0.25em);
   }
@@ -259,8 +265,8 @@ pre {
 
   [data-tooltip]:not([flow]):hover::before,
   [data-tooltip]:not([flow]):hover::after,
-  [data-tooltip][flow^='up']:hover::before,
-  [data-tooltip][flow^='up']:hover::after {
+  [data-tooltip][flow^="up"]:hover::before,
+  [data-tooltip][flow^="up"]:hover::after {
     animation: move-down 200ms ease-out forwards;
   }
 }
@@ -329,12 +335,9 @@ h4 {
   scroll-margin-top: 2em;
 }
 
-
-
 .bad .line.highlight {
   @apply bg-red-800 bg-opacity-20;
 }
-
 
 .good .line.highlight {
   @apply bg-green-800 bg-opacity-20;
@@ -345,7 +348,7 @@ h4 {
 }
 
 .line {
-  @apply px-3
+  @apply px-3;
 }
 
 .prose {
@@ -361,5 +364,5 @@ h4 {
 }
 
 .DocSearch-Button {
-  @apply bg-white ml-0 rounded-md w-full
+  @apply bg-white ml-0 rounded-md w-full;
 }
