--- a/apps/website/src/resources/styles.css
+++ b/apps/website/src/resources/styles.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -25,6 +30,23 @@ a:hover {
   text-decoration: underline;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 2rem 0 1rem 0;
+  color: rgb(211, 24, 136);
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.1);
+}
+
+outlet-wrapper > *:first-child {
+  margin-top: 0;
+}
+
+/* Main header */
+
 header[role="main"] {
   padding-left: 250px;
   margin: 2rem 0;
@@ -41,7 +63,7 @@ section[role="main"] {
 
 nav[role="main"] {
   flex: 250px 0;
-  padding: 2rem;
+  padding: 0 2rem;
 }
 
 nav[role="main"] > ul {
@@ -52,4 +74,32 @@ nav[role="main"] > ul {
 
 main {
   max-width: 800px;
+}
+
+/* Code embeds */
+
+code {
+  font: 14px/1.5 "Fira Code", "Lucida Console", "Source Code Pro", Menlo, Monaco,
+    Consolas, monospace;
+}
+
+pre.shiki {
+  padding: 1.5rem;
+
+  border-radius: 0.5rem;
+  background-color: #f5f5f5;
+}
+
+pre.shiki.github-dark {
+  /* Shiki renders code snippets twice, so let's hide one of them */
+  display: none;
+}
+
+div.language-id {
+  display: none;
+}
+
+pre div.line:after {
+  /* Shiki renders blank lines as empty divs */
+  content: " ";
 }
