--- a/apps/website/src/resources/styles.css
+++ b/apps/website/src/resources/styles.css
@@ -37,8 +37,8 @@ h4,
 h5,
 h6 {
   margin: 2rem 0 1rem 0;
-  color: rgb(211, 24, 136);
-  text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.1);
+  color: #bc4749;
+  text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
 outlet-wrapper > *:first-child {
