--- a/apps/website/src/resources/styles.css
+++ b/apps/website/src/resources/styles.css
@@ -37,8 +37,7 @@ h4,
 h5,
 h6 {
   margin: 2rem 0 1rem 0;
-  color: #75638f;
-  text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.1);
+  color: #b9065f;
 }
 
 outlet-wrapper > *:first-child {
@@ -95,6 +94,7 @@ pre.shiki {
 
   border-radius: 0.5rem;
   background-color: #f5f5f5;
+  overflow: auto;
 }
 
 pre.shiki.github-dark {
