--- a/apps/website/src/resources/styles.css
+++ b/apps/website/src/resources/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap");
 
 *,
 *:before,
@@ -37,7 +37,22 @@ h4,
 h5,
 h6 {
   margin: 2rem 0 1rem 0;
-  color: #b9065f;
+}
+
+h1 {
+  font-weight: 900;
+}
+
+h2,
+h3 {
+  font-size: 125%;
+  border-bottom: 2px solid #eee;
+}
+
+h4,
+h5,
+h6 {
+  font-size: inherit;
 }
 
 outlet-wrapper > *:first-child {
@@ -95,6 +110,11 @@ pre.shiki {
   border-radius: 0.5rem;
   background-color: #f5f5f5;
   overflow: auto;
+}
+
+pre.shiki code {
+  padding: 0;
+  background-color: transparent;
 }
 
 pre.shiki.github-dark {
