--- a/apps/website/src/resources/styles.css
+++ b/apps/website/src/resources/styles.css
@@ -94,18 +94,26 @@ section[role="main"] {
   padding-top: 6rem;
   display: flex;
   flex-direction: row;
+  max-width: 100vw;
 }
 
-/* Left sidebar */
-
-div.sidebar-left {
-  flex: 0 0 300px;
-  padding: 0 2rem;
+main {
+  flex-grow: 1;
+  flex-shrink: 1;
 }
+
+/* Sidebars */
 
 div.sidebar-contents {
   position: fixed;
 }
+
+div.sidebar {
+  flex: 0 0 300px;
+  padding: 0 2rem;
+}
+
+/* Left sidebar */
 
 nav ul {
   list-style: none;
@@ -148,7 +156,8 @@ pre.shiki {
 
   border-radius: 0.5rem;
   background-color: #f5f5f5;
-  overflow: auto;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 pre.shiki code {
@@ -168,4 +177,12 @@ div.language-id {
 pre div.line:after {
   /* Shiki renders blank lines as empty divs */
   content: " ";
+}
+
+/* Small Screen Overrides */
+
+@media screen and (max-width: 420px) {
+  div.sidebar-right {
+    display: none;
+  }
 }
