--- a/apps/website/src/resources/styles.css
+++ b/apps/website/src/resources/styles.css
@@ -93,8 +93,6 @@ header div.title {
 section[role="main"] {
   padding-top: 6rem;
   display: flex;
-  flex-direction: row;
-  max-width: 100vw;
 }
 
 main {
@@ -156,7 +154,7 @@ pre.shiki {
 
   border-radius: 0.5rem;
   background-color: #f5f5f5;
-  overflow: hidden;
+  overflow: auto;
   max-width: 100%;
 }
 
