--- a/apps/website/src/css/styles.scss
+++ b/apps/website/src/css/styles.scss
@@ -74,14 +74,15 @@ header[role="main"] {
   position: fixed;
   width: 100vw;
 
-  padding: 0.25rem 0 0.25rem 320px;
+  padding: 0.5rem 0 0.5rem 320px;
   transition: padding 0.2s ease-in-out;
   margin-bottom: 3rem;
 
   font-size: 125%;
   background-color: rgba(255, 255, 255, 0.95);
-  border-bottom: 2px solid #ddd;
-  box-shadow: 0px 12px 12px rgba(0, 0, 0, 0.08);
+  color: #888;
+  border-bottom: 2px solid #eee;
+  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.05);
 }
 
 header div.title {
@@ -98,6 +99,7 @@ section[role="main"] {
 }
 
 main {
+  flex-grow: 1;
   overflow: hidden;
   padding: 0 20px;
 }
@@ -106,11 +108,12 @@ main {
 
 div.sidebar {
   flex: 0 0 300px;
-  padding: 0 2rem;
+  padding: 0 25px;
 }
 
 div.sidebar-contents {
   position: fixed;
+  width: 250;
 }
 
 /* Left sidebar */
@@ -128,7 +131,7 @@ nav ul {
 
 nav[role="main"] li a {
   display: block;
-  width: 220px;
+  width: 100%;
   margin: 0.5rem 0;
   padding: 4px 13px 3px 13px;
 
