--- a/apps/website/src/css/styles.scss
+++ b/apps/website/src/css/styles.scss
@@ -140,8 +140,8 @@ nav ul {
 nav[role="main"] li a {
   display: block;
   width: 100%;
-  margin: 0.5rem 0;
-  padding: 4px 13px 3px 13px;
+  margin: 2px 0;
+  padding: 8px 16px 7px 16px;
 
   transition: background-color 0.2s ease-out;
   border-radius: 5px;
