--- a/apps/website/src/css/styles.scss
+++ b/apps/website/src/css/styles.scss
@@ -191,20 +191,25 @@ code {
     Consolas, monospace;
 
   font-size: 90%;
-  color: rgb(147, 147, 147);
+  font-weight: bold;
+  color: rgb(255, 105, 105);
 }
 
 pre.shiki {
-  padding: 1rem;
+  padding: 1.5rem;
 
   border-radius: 0.5rem;
   background-color: #f5f5f5;
   overflow: auto;
   max-width: 100%;
+
+  box-shadow: inset 5px 5px 15px rgba(0, 0, 0, 0.05);
 }
 
 pre.shiki code {
   padding: 0;
+  color: inherit;
+  font-weight: inherit;
   background-color: transparent;
 }
 
