--- a/apps/website/src/css/styles.scss
+++ b/apps/website/src/css/styles.scss
@@ -37,6 +37,7 @@ h4,
 h5,
 h6 {
   margin: 2rem 0 1rem 0;
+  scroll-margin-top: 6rem;
 }
 
 h1 {
@@ -72,22 +73,22 @@ blockquote {
 header[role="main"] {
   position: fixed;
   width: 100vw;
-
-  padding: 0.5rem 0 0.5rem 320px;
-  transition: padding 0.2s ease-in-out;
   margin-bottom: 3rem;
+  padding: 0.5rem 0 0.5rem 320px;
 
-  font-size: 125%;
   background-color: rgba(255, 255, 255, 0.95);
-  color: #888;
   border-bottom: 2px solid #eee;
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.05);
-}
 
-header div.title {
-  font-weight: 900;
-  font-size: 125%;
-  margin-bottom: 0;
+  transition: padding 0.2s ease-in-out;
+
+  div.title {
+    margin-bottom: 0;
+
+    font-weight: 900;
+    font-size: 150%;
+    text-transform: uppercase;
+  }
 }
 
 /* Main pane */
