--- a/apps/website/src/css/styles.scss
+++ b/apps/website/src/css/styles.scss
@@ -46,9 +46,11 @@ h6 {
 
 h1 {
   font-weight: 900;
+  font-size: 175%;
+  border-bottom: 5px solid #eee;
+  text-transform: uppercase;
 }
 
-h1,
 h2,
 h3 {
   font-size: 125%;
