--- a/apps/website/src/css/styles.scss
+++ b/apps/website/src/css/styles.scss
@@ -68,7 +68,7 @@ outlet-wrapper > *:first-child {
 }
 
 blockquote {
-  margin-left: 0;
+  margin: 1.5rem 0;
   padding: 0 1rem;
   border-left: 0.5rem solid #eee;
   color: #666;
