The navigation sidebars

--- a/apps/website/src/_includes/layouts/root.njk
+++ b/apps/website/src/_includes/layouts/root.njk
@@ -15,12 +15,16 @@
       <a href="/" class="title">Miniplex</a>
     </header>
 
+    <div class="main-navigation">
+      main nav
+    </div>
+
     <main>
       {{ content | safe }}
     </main>
 
-    <footer role="main">
-      Yay!
-    </footer>
+    <div class="toc-navigation">
+      toc nav
+    </div>
   </body>
 </html>
