--- a/apps/website/src/_includes/layouts/root.njk
+++ b/apps/website/src/_includes/layouts/root.njk
@@ -12,7 +12,9 @@
   </head>
   <body>
     <header role="main">
-      <a href="/" class="title">Miniplex</a>
+      <div class="title">
+        <a href="/" >Miniplex</a>
+      </div>
     </header>
 
     <div class="main-navigation">
