--- a/apps/website/src/_includes/layouts/root.njk
+++ b/apps/website/src/_includes/layouts/root.njk
@@ -18,7 +18,13 @@
     </header>
 
     <div class="main-navigation">
-      main nav
+      <nav role="main">
+        <ul>
+          <li>
+            <a href="/">Introduction</a>
+          </li>
+        </ul>
+      </nav>
     </div>
 
     <main>
